# atlas-asset-client-pypi

./: CHANGELOG.md  README.md
.github/workflows/: release.yml
package/: LICENSE  pyproject.toml  pytest.ini
package/src/atlas_asset_client/: __init__.py
package/src/atlas_asset_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
package/src/atlas_asset_http_client_python/: __init__.py  components.py  http_client.py
package/tests/: conftest.py  test_components.py  test_http_client.py
