[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "atlas-asset-client"
version = "0.3.13"
description = "Async HTTP client for Atlas Command."
readme = "README.md"
requires-python = ">=3.9,<3.14"
license = "MIT"
authors = [
    { name = "ATLAS Team" },
]
keywords = [
    "atlas",
    "command",
    "http",
    "asset",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: System :: Monitoring",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/atlas/command"
Repository = "https://github.com/atlas/command"
Documentation = "https://github.com/atlas/command/wiki"

[tool.setuptools.packages.find]
where = [
    "src",
]
include = [
    "atlas_asset_http_client_python",
    "atlas_asset_http_client_python.*",
    "atlas_asset_client",
    "atlas_asset_client.*",
]

[tool.mypy]
python_version = "3.11"
plugins = []
ignore_missing_imports = true
warn_unused_configs = true
